Game working up to player totals, main has the methods that should be called inside the controller constructor